# eval-workshop-ext

./: .cat-experiments.yml  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configs/: baseline.yaml  models.yaml  system.yaml  tuned.yaml  with_specialists.yaml
configs/agents/: hr_tuned.yaml  hr_with_specialists.yaml  routing_baseline.yaml  routing_tuned.yaml  routing_with_specialists.yaml
data/: live_workshop_hr.jsonl  live_workshop_routing.jsonl
docs/: workshop.md
experiments/: baseline.yaml  hr_specialist.py  hr_tuned.yaml  routing.py  tuned.yaml  with_specialists.yaml
kb/hr/: benefits.md  code_of_conduct.md  expense_reimbursement.md  onboarding.md  time_off.md
prompts/routing/: baseline.txt  tuned.txt  with_specialists.txt
prompts/specialists/hr/: tuned.txt  with_specialists.txt
scripts/: analyze_routing_experiment.py  register_dataset.py
src/agent_platform/: agent.py  client.py  events.py  llm.py  memory.py  observability.py  providers.py  providers_anthropic.py  providers_openai.py  registry.py  runner.py  session.py  tools.py  tracing.py
src/helpdesk/: app.py  main.py  tools.py
src/helpdesk/kb/: chunker.py  vectorstore.py
